<resources>
<string name="app_name">DistributedMeetingScheduler</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related to login -->
    <string name="prompt_email">MAV Email</string>


    <string name="enter_email">Enter MAV Email!</string>
    <string name="enter_password">Enter Password!</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Register</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_username_or_password">Error: Invalid User Name or Password !</string>
    <string name="prompt_serverAddress">Server Address</string>

    <string name="title">Attendance Management System</string>
    <string name="title_activity_mav_sign_up">Registration</string>



    <!-- Mav Sign Up strings-->
    <string name = "header_mav_sign_up">Registration</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_mav_email">Mav Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="prompt_device_id">Android Device Id</string>

    <string name="error_enter_first_name">Enter First Name</string>
    <string name="error_enter_last_name">Enter Last Name</string>
    <string name="error_enter_email">Enter Email</string>
    <string name="error_enter_password">Enter Password</string>
    <string name="error_enter_confirm_password">Enter Confirm Password</string>
    <string name="error_enter_password_not_match">Password Does not Match</string>
    <string name="error_occured">Error Occured!</string>
    <string name="register_success">Registered Successfully!</string>

    <string name= "btn_mav_sign_up_text">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_student_main">StudentMainActivity</string>
    <string name="title_activity_qrcode_generate">QRCodeGenerateActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="btn_propose_meeting">Propose Meeting</string>
    <string name="btn_schedule_meeting">Schedule Meeting</string>
    <string name="btn_notifications">Notifications</string>
    <string name="title_activity_schedule_meeting">ScheduleMeeting</string>



    <string name="selectdate1">Select Date</string>
    <string name="Enter">Event Name</string>
    <string name="SelectDate2">Start Time </string>
    <string name="Description">Enter the Descriptions of Event</string>
    <string name="title_activity_set_reminder">SetReminder</string>
    <string name="title_activity_notification_view">NotificationView</string>
    <string name="title_activity_add__invites">ADD_Invites</string>
    <string name="title_activity_menu_page">MenuPage</string>
    <string name="title_activity_event__details">Event_Details</string>
    <string name="title_activity_notifiactions">Notifiactions</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_meeting_request">MeetingRequestActivity</string>
    <string name="title_activity_organizer_list">OrganizerListActivity</string>
    <string name="title_activity_organizer_final_meeting">OrganizerFinalMeetingActivity</string>


</resources>
