<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:src="@mipmap/dms_logo"
        android:padding="40dp"/>


    <Button
        android:id="@+id/btnProposeMeeting"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_propose_meeting"
        android:padding="20dp"/>

    <Button
        android:id="@+id/btnScheduleMeeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_schedule_meeting"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnNotifications"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_notifications"
        android:padding="20dp" />


</LinearLayout>
