<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent" android:layout_height="fill_parent">


    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        tools:context="edu.uta.cse.distributedmeetingscheduler.SignUpActivity">


        <ImageView android:id="@+id/logo_image_small" android:layout_marginBottom="3dp"
            android:layout_width="fill_parent" android:padding="15dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/dms_logo"/>
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminate="true"
            android:layout_marginBottom="8dp" android:visibility="gone" android:layout_gravity="center" />


        <EditText android:id="@+id/txtFirstName"
            android:padding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_first_name"
            android:layout_below="@+id/logo_image_small"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="3dp"/>

        <EditText android:id="@+id/txtLastName"
            android:padding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_last_name"
            android:layout_below="@+id/logo_image_small"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText android:id="@+id/txtMavEmail"
            android:padding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:hint="@string/prompt_mav_email"
            android:layout_below="@+id/logo_image_small"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText android:id="@+id/txtPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo_image_small"
            android:padding="15dp"
            android:password="true"
            android:hint="@string/prompt_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <EditText android:id="@+id/txtConfirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:password="true"
            android:hint="@string/prompt_confirm_password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>


     <!--   <EditText android:id="@+id/txtAndroidDeviceId"
            android:padding="15dp"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:hint="@string/prompt_device_id"
            android:layout_below="@+id/logo_image_small"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" /> -->



        <Button android:id="@+id/mav_sign_up_btn" android:text="@string/btn_mav_sign_up_text"
            android:padding="15dp"
            android:layout_marginTop="3dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>


